index.htmol was updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
-	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.3.css">
+	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body {
        padding-top: 20px;
@@ -29,7 +29,7 @@
        line-height: 124px;
       }
       .thermometer, .order, .social {
-       /* line-height to vertically center: http://phroz.net/vertical-align/index.html */
+       /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
        height: 40px;
        line-height: 40px;
       }
@@ -53,7 +53,7 @@
       </div>
       <div class="row heading">
 	<div class="span12">
-	  Bitstarter Title
+	  <h1>Bitstarter Title</h1>
 	</div>
       </div>
       <div class="row subheading">
@@ -79,15 +79,15 @@
       </div>
       <div class="row section1">
 	<div class="span12">
-	  Marketing section 1
+	  Marketing Section 1
 	</div>
       </div>
       <div class="row section2">
 	<div class="span12">
-	  Marketing section 2
+	  Marketing Section 2
 	</div>
       </div>
-      <div class="faq">
+      <div class="row faq">
 	<div class="span12">
 	  FAQ
 	</div>
