Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 		<div class="span5 copy">
 			<p>
-				Marketing section 1.
+				Marketing section 1 new.
 			</p>
 		</div>
       </div>
