Fixed staging bugs in develop branch

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	  <div class="row-fluid section2">
 		<div class="span5 offset1 copy copy-right">
 			<p>
-				Marketing section 2.
+				Marketing section 2 new.
 			</p>
 		</div>
 		<div class="span5 asset">
