--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 	  
 		<!-- We define a new 'actions' div to contain statistics, order and share buttons. -->  
 		  <div class="span5 actions">
+			<div class="row-fluid">
 			  <div class="span8 offset2">
 				<div class="statistics">
 					<div class="span4">
@@ -179,27 +180,36 @@
 					</div>
 				</div>			
 			  </div>
-			  <div class="span10 offset1">
-				<div class="thermometer progress active">
-					<div class="bar bar-success" style="width: 60%;"></div>
-					<div class="bar bar-warning" style="width: 40%;"></div>
-				</div>			
-			  </div>
-			  <div class="span6 offset3 order">
-				<!-- Standard Bootstrap button. -->  
-				<button class="btn btn-success btn-large">Preorder</button>		
-			  </div>
-			  <div class="span8 offset2 social">
-				<!-- Social buttoons are not included in default Bootstrap. -->  
-				<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>		
-				<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>		
-			  </div>
+
+				<div class="row-fluid">
+				  <div class="span10 offset1">
+					<div class="thermometer progress active">
+						<div class="bar bar-success" style="width: 60%;"></div>
+						<div class="bar bar-warning" style="width: 40%;"></div>
+					</div>			
+				  </div>
+				</div>
+				<div class="row-fluid">
+				  <div class="span6 offset3 order">
+					<!-- Standard Bootstrap button. -->  
+					<button class="btn btn-success btn-large">Preorder</button>		
+				  </div>
+				</div>	
+				<div class="row-fluid">
+				  <div class="span8 offset2 social">
+					<!-- Social buttons are not included in default Bootstrap. -->  
+					<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+					<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>		
+					<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>		
+				  </div>
+				</div>
+			</div>	
 		  </div>
 	  </div>
       
 	  <div class="row-fluid section1">
 		<div class="span5 offset1 asset">
-			<img class="img-polaroid" src="http://placehold.it/480x300">
+			<img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 		</div>
 		<div class="span5 copy">
 			<p>
@@ -215,13 +225,13 @@
 			</p>
 		</div>
 		<div class="span5 asset">
-			<img class="img-polaroid" src="http://placehold.it/480x300">
+			<img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 		</div>
       </div>
 	  
       <div class="row-fluid faq">
 		<div class="span10 offset1">
-			<h3>FAQ</h3>			
+			<h3>FAQ</h3>
 			<div class="accordion" id="accordion2">
 				<div class="accordion-group">
 					<div class="accordion-heading">
@@ -250,7 +260,9 @@
 			</div>
 		</div>
       </div>
-	  
+
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
 		<div class="span12">
 			<p> This work is licensed under
