Added pay with Bitcoins.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,13 @@
 				<div class="row-fluid">
 				  <div class="span6 offset3 order">
 					<!-- Standard Bootstrap button. -->  
-					<button class="btn btn-success btn-large">Preorder</button>		
+					<!--<button class="btn btn-success btn-large">Preorder</button>--> 
+					<a class="coinbase-button"
+					 data-button-style="custom_large"
+					 data-button-text="Preorder with Bitcoin"
+					 data-code="cf895e279a39e4f0ebeb375b58272b10" 
+					 href="https://coinbase.com/checkouts/cf895e279a39e4f0ebeb375b58272b10">
+					Preorder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>	
 				  </div>
 				</div>	
 				<div class="row-fluid">
